[package]
name = "udp-fun"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]

[dependencies]
bytes = "0.4.3"
futures = "0.1.13"
tokio-core = "0.1.7"
tokio-io = "0.1.1"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
tokio-timer = "0.1.1"
byteorder = "1.0.0"
clap = "2.24.1"
rand = "0.3.15"
